# fisjogos

./: .gitmodules  README.md  fabio2.py  fisjogos.py  jupyter_exercise1.py  my_resource.pyxres  pyproject.toml  retro_archery.py  slingshot.py
class_examples/: fabio.py  game.py
res/: my_resource.pyxres
src/: __init__.py  cooldowns.py  game.py  hud.py  inputs.py  models.py  utils.py
src/models/: __init__.py  game_classes.py  pyxel_base.py
